--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -8,6 +8,36 @@ html{
 	box-sizing: inherit;
 }
 body {
-	color: #000;
+  // min-width: 320px;
+  margin: 0;
+  padding: 0;
 	overflow-x: hidden;
+
+	font-family: 'Open Sans', sans-serif;
+	font-size: 15px;
+	line-height: 24px;
+	font-weight: 400;
+	color: #000;
+}
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.container {
+  max-width: 1150px;
+  padding: 0 30px;
+  margin: 0 auto;
 }
