--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -8,7 +8,7 @@ html{
 	box-sizing: inherit;
 }
 body {
-  // min-width: 320px;
+  min-width: 320px;
   margin: 0;
   padding: 0;
 	overflow-x: hidden;
@@ -40,4 +40,9 @@ input[type="radio"].visually-hidden {
   max-width: 1150px;
   padding: 0 30px;
   margin: 0 auto;
+}
+.title {
+  font-size: 25px;
+  line-height: 30px;
+  font-weight: 700;
 }
