--- a/scss/style.scss
+++ b/scss/style.scss
@@ -214,6 +214,17 @@
 			background-repeat: no-repeat;
 			background-position: center center;
 		}
+		&:hover {
+			&::after {
+				opacity: 0.7;
+			}
+		}
+		&:active {
+			color: rgba($color: #fff, $alpha: 0.3);
+			&::after {
+				opacity: 0.3;
+			}
+		}
 	}
 	&__item--interior {
 		.main-section__link {
@@ -247,10 +258,74 @@
 	}
 }
 
+// baskets ---------------------------/
+.baskets {
+	padding: 0 0 42px;
+	margin: 0 0 28px;
 
+	background-image: url(../images/baskets-zigzag.svg);
+	background-position: 0 100%;
+	background-size: 16px 7px;
+	background-repeat: repeat-x;
+	&__title {
+		margin: 0 0 8px;
+	}
+	&__status {
+		margin: 0 0 25px;
 
+		font-size: 17px;
+		font-weight: 700;
+		line-height: 20px;
+		text-transform: uppercase;
+		color: $green;
+	}
+	&__list {
+		@include reset-ul;
+	}
+	&__info-box {
+		color: #444;
+	}
+	&__text {
+		max-width: 350px;
+		margin: 0 0 18px;
+	}
+	&__table {
+		width: 100%;
+		margin: 0 0 28px;
+		border-collapse: collapse;
+	}
+	&__cell {
+		padding: 9px 0 8px;
+		border-bottom: 1px solid #ececec;
+		&:first-child {
+			width: 38%;
+		}
+	}
+	&__img-box {
+		margin: 0 0 28px;
 
+		background-color: #f1f1f1;
+	}
+	&__img {
+		display: block;
+		width: 260px;
+		height: 315px;
+		margin: 0 0 0 auto;
 
+		object-fit: cover;
+	}
+	&__price {
+		font-size: 17px;
+		font-weight: 700;
+		text-align: center;
+
+		margin: 0 0 25px;
+	}
+	&__btn {
+		max-width: 360px;
+		margin: 0 auto;
+	}
+}
 
 
 
