--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -99,6 +99,22 @@
 			background-size: 37px 15px;
 		}
 	}
+
+	// footer -------------------------/
+	.footer {
+		&__title {
+			padding: 0 50px;
+
+			font-size: 25px;
+		}
+		&__info {
+			padding: 0 50px;
+		}
+		&__btn {
+			width: 230px;
+			padding: 14px 36px;
+		}
+	}
 }
 
 
@@ -351,6 +367,92 @@
 			font-size: 17px;
 		}
 	}
+
+	// footer -------------------------/
+	.footer {
+		&__title {
+			margin: 0 auto 50px;
+			
+
+			position: relative;
+			&::after {
+				content: '';
+
+				position: absolute;
+				top: 50%;
+				right: 50px;
+
+				width: 47px;
+				height: 81px;
+				transform: translateY(-50%);
+
+				background-image: url(../images/icons/flag.svg);
+			}
+		}
+		&__info {
+			display: flex;
+			align-items: flex-start;
+			margin: 0 auto 55px;
+
+			font-size: 17px;
+		}
+		&__mail {
+			width: 50%;
+			align-items: flex-start;
+			margin: 0;
+			&-link {
+				margin: 0 0 0 24px;
+
+				line-height: 30px;
+			}
+		}
+		&__address {
+			width: 50%;
+			margin: 0;
+			&-info {
+				margin: 0 0 0 24px;
+			}
+		}
+		&__map {
+			margin: 0 0 55px;
+		}
+		&__btn {
+			margin: 0 auto 55px;
+		}
+		&__bottom {
+			padding: 50px 0 55px;
+			&-wrap {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				padding: 0 50px;
+			}
+		}
+		&__logo-wrap {
+			width: 35%;
+		}
+		&__logo {
+			display: block;
+		}
+		&__copy {
+			justify-content: flex-end;
+			width: 35%;
+			margin: 0;
+			&-icon {
+				margin: 0 0 0 40px;
+			}
+		}
+	}
+
+	// social-networks ----------------/
+	.social-networks {
+		display: flex;
+		justify-content: center;
+		width: 35%;
+		margin: 0;
+		padding: 0;
+		border: none;
+	}
 }
 
 
@@ -511,7 +613,7 @@
 	// reviews ------------------------/
 	.reviews {
 		max-width: 1150px;
-		margin: 0 auto;
+		margin: 0 auto 70px;
 		padding: 0 50px;
 		&__inner {
 			padding: 173px 0 80px 175px;
@@ -527,6 +629,58 @@
 		}
 		&__btn {
 			right: 0;
+		}
+	}
+
+	// footer -------------------------/
+	.footer {
+		&__top-box {
+			max-width: 1150px;
+			margin: 0 auto 105px;
+			padding: 0 50px;
+
+			position: relative;
+		}
+		&__title {
+			padding: 0 0 0 113px;
+
+			position: absolute;
+			top: 72px;
+			left: 112px;
+			&::after {
+				right: auto;
+				left: 0;
+			}
+		}
+		&__top {
+			display: flex;
+			justify-content: space-between;
+			width: 875px;
+			margin: 0 0 0 auto;
+		}
+		&__info {
+			display: block;
+			margin: 0;
+			padding: 175px 0 0 0;
+		}
+		&__mail {
+			width: auto;
+			margin: 0 0 30px;
+		}
+		&__address {
+			width: auto;
+		}
+		&__map {
+			width: 525px;
+			height: 458px;
+			margin: 0;
+		}
+		&__btn {
+			margin: 0;
+
+			position: absolute;
+			left: 225px;
+			bottom: 0;
 		}
 	}
 }
