added html catalog page

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -58,4 +58,6 @@ input[type="radio"].visually-hidden {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+
+  background-color: transparent;
 }
