--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,11 +47,13 @@
 
 		color: #000;
 		text-decoration: none;
-		&:hover {
-			color: rgba($color: #000, $alpha: 0.6);
-		}
-		&:active {
-			color: rgba($color: #000, $alpha: 0.3);
+		&[href] {
+			&:hover {
+				color: rgba($color: #000, $alpha: 0.6);
+			}
+			&:active {
+				color: rgba($color: #000, $alpha: 0.3);
+			}
 		}
 	}
 	&__delivery {
@@ -153,12 +155,15 @@
 	width: 86px;
 	height: 35px;
 	margin: 22px auto;
-	&[href] {
-		&:hover  {
-			opacity: 0.6;
-		}
-		&:active  {
-			opacity: 0.3;
+	&__link {
+		display: block;
+		&[href] {
+			&:hover  {
+				opacity: 0.6;
+			}
+			&:active  {
+				opacity: 0.3;
+			}
 		}
 	}
 	&__img {
@@ -570,7 +575,6 @@
 		align-items: center;
 		max-width: 184px;
 		margin: 0 0 0 -40px;
-		// margin: 0 auto;
 
 	}
 	&__item {
@@ -600,7 +604,107 @@
 
 
 
+// страница каталога ===========================/
+.catalog-page__title {
+	margin: 0 auto 30px;
+	padding: 73px 0;
 
+	font-size: 27px;
+	text-align: center;
+
+	background-color: #f1f1f1;
+}
+
+// catalog ---------------------------/
+.catalog {
+	&__list {
+		@include reset-ul;
+	}
+	&__item {
+		display: flex;
+		flex-direction: column;
+		max-width: 350px;
+		margin: 0 auto 30px;
+		&:hover {
+			box-shadow: 0 6px 10px 1px rgba($color: #000, $alpha: 0.1);
+		}
+	}
+	&__info-box {
+		padding: 30px 28px 25px;
+		border: 1px solid #ededed;
+
+		order: 2;
+	}
+	&__info {
+		margin: 0 0 22px;
+		padding: 0 0 20px;
+		border-bottom: 1px solid #ececec;
+	}
+	&__name {
+		margin: 0 0 4px;
+		&-link {
+			font-size: 17px;
+			font-weight: 700;
+			color: #000;
+			text-decoration: none;
+			&:hover {
+				opacity: 0.6;
+			}
+			&:active {
+				opacity: 0.3;
+			}
+		}
+	}
+	&__feature {
+		margin: 0;
+
+		font-size: 13px;
+		line-height: 30px;
+		color: #444;
+	}
+	&__price-box {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	&__price {
+		margin: 0;
+
+		font-weight: 700;
+	}
+	&__basket-icon {
+		display: block;
+
+		opacity: 0.2;
+	}
+	&__basket-link {
+		&:hover {
+			.catalog__basket-icon {
+				opacity: 1;
+				path {
+					fill: $green;
+				}
+			}
+		}
+		&:active {
+			.catalog__basket-icon {
+				opacity: 0.3;
+				path {
+					fill: $green;
+				}
+			}
+		}
+	}
+	&__img-box {
+		order: 1;
+	}
+	&__img {
+		display: block;
+		width: 100%;
+		max-height: 300px;
+		object-fit: cover
+	}
+}
 
 
 
