--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -509,6 +509,36 @@
 			max-height: 350px;
 		}
 	}
+
+	// video --------------------------/
+	.video {
+		max-width: 800px;
+		margin: 0 auto 63px;
+		&__title {
+			padding: 40px 42px 32px 107px;
+			order: 2;
+
+			font-size: 20px;
+			&::before {
+				top: 40px;
+				left: 41px;
+				transform: translate(0);
+			}
+		}
+		&__content {
+			order: 1;
+		}
+		&__descr {
+			padding: 0 40px 46px;
+			order: 3;
+		}
+		&__text {
+			margin: 0 0 33px;
+
+			font-size: 15px;
+			line-height: 30px;
+		}
+	}
 }
 
 
@@ -746,6 +776,10 @@
 	.catalog-page__title {
 		margin: 0 auto 128px;
 		padding: 100px 0 93px;
+
+		
+		background-size: 58px 34px;
+		background-position: 0 108%;
 	}
 
 	// catalog ------------------------/
@@ -775,6 +809,42 @@
 		}
 		&__img {
 			max-height: 462px;
+		}
+	}
+
+	// video --------------------------/
+	.video {
+		max-width: 100%;
+		height: 457px;
+		margin: 0 auto 105px;
+		padding: 0 56px 60px 0;
+		border: 1px solid #ececec;
+
+		position: relative;
+		&__title {
+			max-width: 155px;
+			margin: 0 0 0 760px;
+			padding: 98px 0 33px 0;
+			border: none;
+			&::before {
+				top: 46px;
+				left: 0;
+			}
+		}
+		&__content {
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+		&__descr {
+			padding: 0;
+			border: none;
+		}
+		&__text {
+			margin: 0 0 44px 760px;
+		}
+		&__btn {
+			margin: 0 0 0 760px;
 		}
 	}
 }
