--- a/scss/style.scss
+++ b/scss/style.scss
@@ -623,7 +623,7 @@
 	&__item {
 		display: flex;
 		flex-direction: column;
-		max-width: 350px;
+		max-width: 450px;
 		margin: 0 auto 30px;
 		&:hover {
 			box-shadow: 0 6px 10px 1px rgba($color: #000, $alpha: 0.1);
@@ -701,12 +701,85 @@
 	&__img {
 		display: block;
 		width: 100%;
-		max-height: 300px;
+		max-height: 350px;
 		object-fit: cover
 	}
 }
 
+// video -----------------------------/
+.video {
+	display: flex;
+	flex-direction: column;
+	max-width: 450px;
+	margin: 0 auto 58px;
+	&__title {
+		margin: 0;
+		padding: 27px 42px 23px 90px;
+		border: 1px solid #ececec;
+		border-bottom: none;
 
+		position: relative;
+
+		font-size: 17px;
+		&::before {
+			content: '';
+
+			position: absolute;
+			top: 50%;
+			left: 33px;
+
+			width: 33px;
+			height: 22px;
+			transform: translateY(-50%);
+
+			background-image: url(../images/icons/video-icon.svg);
+		}
+	}
+	&__content {
+		position: relative;
+
+		cursor: pointer;
+		&:hover {
+			.video__icon {
+				transform: translate(-50%, -50%) scale(1.2);
+			}
+		}
+		&:active {
+			.video__icon {
+				opacity: 0.3;
+				transform: translate(-50%, -50%) scale(0.8);
+			}
+		}
+	}
+	&__img {
+		display: block;
+		width: 100%;
+	}
+	&__icon {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+
+		transform: translate(-50%, -50%);
+
+		transition: all 0.2s;
+	}
+	&__descr {
+		padding: 30px 33px;
+		border: 1px solid #ececec;
+		border-top: none;
+
+	}
+	&__text {
+		margin: 0 0 24px;
+
+		font-size: 13px;
+		color: #444;
+	}
+	&__btn {
+		padding: 14px 22px;
+	}
+}
 
 
 
