--- a/scss/style.scss
+++ b/scss/style.scss
@@ -605,7 +605,7 @@
 
 
 // страница каталога ===========================/
-.catalog-page__title {
+.page-title {
 	margin: 0 auto 30px;
 	padding: 73px 0;
 
