--- a/scss/style.scss
+++ b/scss/style.scss
@@ -783,7 +783,217 @@
 
 
 
+// страница формы ==============================/
+.form-page__descr {
+	max-width: 1150px;
+	margin: 0 auto 25px;
+	padding: 0 30px;
 
+	font-size: 13px;
+	color: #444;
+}
+.form {
+	margin: 0 0 55px;
+	&__group {
+		margin: 0;
+		padding: 0;
+		border: none;
+	}
+	&__type {
+		padding: 0 0 22px;
+	}
+	&__color,
+	&__contacts {
+		display: block;
+		max-width: 1150px;
+		margin: 0 auto;
+		padding: 0 30px;
+	}
+	&__legend {
+		display: flex;
+		align-items: center;
+		width: 100%;
+		margin: 0 0 30px;
+
+		font-size: 17px;
+		font-weight: 700;
+		color: $green;
+		text-transform: uppercase;
+		&::after {
+			content: '';
+			flex-grow: 1;
+			height: 1px;
+			margin-left: 18px;
+
+			background-color: $green;
+		}
+	}
+	&__label {
+		display: block;
+
+		position: relative;
+
+		font-size: 17px;
+		font-weight: 700;
+	}
+	&__type-label,
+	&__color-label {
+		padding: 0 0 0 62px;
+	}
+	&__type-label {
+		margin: 0 0 20px;
+	}
+	&__color-label {
+		margin: 0 0 40px;
+	}
+	&__radio-indicator {
+		width: 38px;
+		height: 38px;
+		border-radius: 50%;
+		border: 2px solid #444;
+
+		position: absolute;
+		top: -7px;
+		left: 0;
+	}
+	&__radio-inp:checked + .form__radio-indicator {
+		&::after {
+			content: '';
+
+			width: 15px;
+			height: 15px;
+			transform: translate(-50%, -50%);
+			border-radius: 50%;
+
+			position: absolute;
+			top: 50%;
+			left: 50%;
+
+			background-color: $green;
+		}
+	}
+	&__checkbox-indicator {
+		width: 40px;
+		height: 40px;
+		border: 2px solid #444;
+
+		position: absolute;
+		top: -8px;
+		left: 0;
+		&::after {
+			content: '';
+
+			position: absolute;
+			top: 50%;
+			left: 50%;
+
+			width: 22px;
+			height: 16px;
+			transform: translate(-50%, -50%) scale(0);
+
+			background-image: url(../images/icons/checkbox.svg);
+			transition: all 0.2s;
+		}
+	}
+	&__checkbox-inp:checked + .form__checkbox-indicator {
+		&::after {
+			transform: translate(-50%, -50%) scale(1);
+		}
+	}
+	&__FIO {
+		padding: 0 0 8px;
+	}
+	&__FIO-label {
+		margin: 0 0 22px;
+	}
+	&__FIO-text {
+		display: block;
+	}
+	&__text-inp {
+		width: 100%;
+		padding: 12px 0;
+		border: 2px solid transparent;
+		border-bottom-color: #000;
+		border-radius: 0;
+
+		font-size: 17px;
+		line-height: 24px;
+		color: #000;
+		&::placeholder {
+			color: rgba(#444, 0.3);
+		}
+	}
+	&__contacts-label {
+		margin: 0 0 30px;
+	}
+	&__contacts-text {
+		display: flex;
+		align-items: center;
+		
+		font-size: 17px;
+		font-weight: 700;
+		color: $green;
+		text-transform: uppercase;
+		&::after {
+			content: '';
+
+			flex-grow: 1;
+			height: 1px;
+			margin-left: 18px;
+
+			background-color: $green;
+		}
+	}
+	&__contacts-phone-icon,
+	&__contacts-mail-icon {
+		position: absolute;
+
+		opacity: 0.2;
+	}
+	&__contacts-phone-icon {
+		right: 8px;
+		bottom: 17px;
+	}
+	&__contacts-mail-icon {
+		right: 4px;
+		bottom: 15px;
+	}
+	&__additionally {
+		margin: 0 0 16px;
+	}
+	&__textarea-legend {
+		margin: 0 0 20px;
+	}
+	&__textarea {
+		display: block;
+		width: 100%;
+		height: 142px;
+		padding: 15px;
+		border: 2px solid #000;
+		border-radius: 0;
+		resize: none;
+
+		font-size: 17px;
+		line-height: 24px;
+		color: #000;
+		&::placeholder {
+			color: rgba(#444, 0.3);
+		}
+	}
+	&__required {
+		display: block;
+		margin: 0 0 28px;
+
+		font-size: 14px;
+		line-height: 16px;
+		color: #444;
+		text-align: center;
+	}
+	&__btn {
+		width: 100%;
+		padding: 14px 40px;
+	}
+}
 
 
 
