--- a/scss/style.scss
+++ b/scss/style.scss
@@ -171,6 +171,96 @@
 	}
 }
 
+// модалка ---------------------------/
+.modal {
+	display: none;
+	&::before {
+		content: '';
+		background: #fff;
+		position: fixed; 
+		left: 0;
+		top: 0;
+		width: 100%; 
+		height: 100%;
+		opacity: 0.9;
+		z-index: 10;
+	}
+	&__inner {
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		z-index: 10;
+
+		width: 320px;
+		padding: 34px 29px 46px;
+		border: 1px solid #c7c7c7;
+		transform: translate(-50%, -50%);
+
+		background-color: #fff;
+		box-shadow: 0 5px 10px 0 rgba(#000, 0.25);
+	}
+	&__title {
+		width: 140px;
+		margin: 0 auto 17px;
+
+		font-size: 25px;
+		font-weight: 700;
+		line-height: 30px;
+		text-align: center;
+	}
+	&__form-choice {
+		margin: 0 0 20px;
+
+		font-size: 15px;
+		line-height: 30px;
+		color: #444;
+		text-align: center;
+	}
+	&__form-box {
+		display: flex;
+		justify-content: space-between;
+		margin: 0 0 30px;
+	}
+	&__label {
+		cursor: pointer;
+	}
+	&__checkbox-indicator {
+		display: block;
+		width: 82px;
+		padding: 12px 0;
+		border: 2px solid rgba($color: #444, $alpha: 0.1);
+
+		font-size: 17px;
+		font-weight: 700;
+		line-height: 24px;
+		color: #444;
+		text-align: center;
+	}
+	&__label:hover {
+		.modal__checkbox-indicator {
+			border-color: rgba($color: #444, $alpha: 0.3);
+		}
+	}
+	&__checkbox:checked + .modal__checkbox-indicator {
+		border-color: $green;
+	}
+	&__btn {
+		width: 100%;
+		padding: 14px 75px;
+
+		color: #fff;
+
+		background-color: $green;
+		border-color: $green;
+		&:hover {
+			border-color: #444;
+		}
+	}
+}
+.modal--show {
+	display: block;
+}
+
 // main-section ----------------------/
 .main-section {
 	margin: 0 0 30px;
